--- a/templates/public/about.tmpl
+++ b/templates/public/about.tmpl
@@ -4,11 +4,10 @@
     set_primary_tab("menu_about");
 </script>
 
-<table cellpadding=20>
-  <tr>
-    <td style="width:385px"> <!-- image is 375px wide -->
+<div id="aside-image-left">
       <img src='/img/card_catalogue.jpg' alt="picture of a library card catalogue"/>
-      <br/>
+</div>
+<div id="main-info-right">
       <p class="short_instruction">
 	Photo by Flickr user haaaley.  http://flickr.com/photos/misshaley/515045131/
       </p>
@@ -33,14 +32,11 @@
 	linking your account to any searches or requests is kept after the ILL transaction is completed.
 	Some non-identifying data may be retained for statistical purposes.
       </p>
-      <br/>
-      <br />
+</div><!--main-info-right-->
 <!--
       <p class="debuginfo">Logged in as [<TMPL_VAR NAME="username">]</p>
       <p class="debuginfo">Session id [<TMPL_VAR NAME="sessionid">]</p>
 -->
-    </td>
-  </tr>
-</table>
+
 
 <TMPL_INCLUDE NAME="footer.tmpl">
