--- a/templates/oops.tmpl
+++ b/templates/oops.tmpl
@@ -4,6 +4,7 @@
 <title>Oops</title>
 </head>
 <body>
+<img src="img/oops.jpg">
 <b>Oops!</b>
 <p>Error code: <TMPL_VAR NAME=ERRCODE></p>
 <p>Error mesg: <TMPL_VAR NAME=ERRMSG></p>
