--- a/templates/public/myaccount.tmpl
+++ b/templates/public/myaccount.tmpl
@@ -67,11 +67,11 @@ $('document').ready(function(){
   <div id="myDiv">
     <h3>My Account</h3>
     <table id="fill-table">
-      <tr><th scope="row">Name</td><td><TMPL_VAR name="name"></td></tr>
-      <tr><th scope="row">fILL username</td><td><TMPL_VAR name="username"></td></tr>
-      <tr><th scope="row">Home library</td><td><TMPL_VAR name="library"></td></tr>
-      <tr><th scope="row">Account status</td><td><TMPL_VAR name="is_enabled"></td></tr>
-      <tr><th scope="row">fILL Patron ID#</td><td id="pid"><TMPL_VAR name="pid"></td></tr>
+      <tr><th scope="row">Name</th><td><TMPL_VAR name="name"></td></tr>
+      <tr><th scope="row">fILL username</th><td><TMPL_VAR name="username"></td></tr>
+      <tr><th scope="row">Home library</th><td><TMPL_VAR name="library"></td></tr>
+      <tr><th scope="row">Account status</th><td><TMPL_VAR name="is_enabled"></td></tr>
+      <tr><th scope="row">fILL Patron ID#</th><td id="pid"><TMPL_VAR name="pid"></td></tr>
     </table>
   </div>
   
