small change to log in button

--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -82,7 +82,7 @@ $('document').ready(function(){
 
 <!--**************ARIA MARKER 'BANNER'**************-->
   <header role="banner">
-      <div class="fill-info"><button class="button-left" href="#">log out</button><p>User: awoodward</p><p>Western Manitoba Regional Library - Brandon</p></div>
+      <div class="fill-info"><button class="button-right" href="#">log out</button><p>User: awoodward</p><p>Western Manitoba Regional Library - Brandon</p></div>
       <div><img class="fill-logo" alt="fILL" src="images/fill05.png"><!--<h1><span class="fill">f</span>ILL</h1>--></div>
       <div class="fill-tagline"><p class="fill-tagline">connecting libraries.<wbr> serving patrons.</p></div>
       
