--- a/templates/public/faq.tmpl
+++ b/templates/public/faq.tmpl
@@ -25,7 +25,7 @@
 </div><!--main-info-left-->
 
 <div id="aside-image-right">
-      <img src='/img/card_catalogue.jpg' alt="picture of a library card catalogue"/>
+      <img src='/img/faq.jpg' alt="picture of a library card catalogue"/>
       <p class="short_instruction">
    
 </div>
