--- a/templates/public/footer.tmpl
+++ b/templates/public/footer.tmpl
@@ -5,6 +5,7 @@
     <li><a href=/cgi-bin/lightning.cgi?rm=environment_form>ENV display</a></li>
     <li><a href="?authen_logout=1">Log out</a></li>
   </ul>
+  <p><TMPL_VAR name="username"><TMPL_VAR name="lid"><TMPL_VAR name="library"></p>
 </div>
 </footer>
 	<img class="bison" alt="Manitoba Bison Logo" title="Service provided by the Government of Manitoba" src="images/manitoba.gif">
