--- a/templates/public/footer.tmpl
+++ b/templates/public/footer.tmpl
@@ -1,21 +1,13 @@
 <!-- End content -->
 <footer role="contentinfo">
 <div id="nav2">
-  <ul>
-    <li><a href=/cgi-bin/lightning.cgi?rm=environment_form>ENV display</a></li>
-    <li><a href="?authen_logout=1">Log out</a></li>
-  </ul>
+  
+    <a href=/cgi-bin/lightning.cgi?rm=environment_form>ENV display</a>|<li><a href="?authen_logout=1">Log out</a></li>
+
   <p><TMPL_VAR name="username"><TMPL_VAR name="lid"><TMPL_VAR name="library"></p>
 </div>
 </footer>
-	<img class="bison" alt="Manitoba Bison Logo" title="Service provided by the Government of Manitoba" src="images/manitoba.gif">
-
-<div id="nav2">
-  <ul>
-    <li><a href=/cgi-bin/lightning.cgi?rm=environment_form>ENV display</a></li>
-    <li><a href="?authen_logout=1">Log out</a></li>
-  </ul>
-</div>
-
+	<img class="bison" alt="Manitoba Bison Logo" title="Service provided by the Government of Manitoba" src="img/manitoba.gif">
+  
 </body>
 </html>
