bison logo added
updated corrections

--- a/templates/public/footer.tmpl
+++ b/templates/public/footer.tmpl
@@ -2,12 +2,12 @@
 <footer role="contentinfo">
 <div id="nav2">
   
-    <a href=/cgi-bin/lightning.cgi?rm=environment_form>ENV display</a>|<li><a href="?authen_logout=1">Log out</a></li>
+    <a href=/cgi-bin/lightning.cgi?rm=environment_form>ENV display</a>|<a href="?authen_logout=1">Log out</a>
 
   <p><TMPL_VAR name="username"><TMPL_VAR name="lid"><TMPL_VAR name="library"></p>
 </div>
 </footer>
-	<img class="bison" alt="Manitoba Bison Logo" title="Service provided by the Government of Manitoba" src="img/manitoba.gif">
-  
+	<img class="bison" alt="Manitoba Bison Logo" title="Service provided by the Government of Manitoba" src="/img/manitoba.gif">
+
 </body>
 </html>
