descriptive text and hide aside test
attempting to hide aside on info pages using display: none. Also tying
to determine which location header tmpl is being drawn from.

--- a/templates/public/header.tmpl
+++ b/templates/public/header.tmpl
@@ -54,6 +54,7 @@
 <body class="example_alt_pagination">
 
 <div id="container">
+<!--header template from public folder-->
   <!--ARIA MARKER 'BANNER'-->
   <header role="banner">
     <img src="/img/fill-logo.png" class="fill-logo" alt="fill"> <p class="fill-tagline">connecting libraries. serving patrons.</p>
