--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -1,7 +1,7 @@
 <TMPL_INCLUDE NAME="header.tmpl">
 
 <div id="aside-img-left">
-  <img src="/Users/anthonywoodward/Documents/Projects/fILL/htdocs/img/fill-logo.png">
+  <img src="/img/fill-logo.png">
 </div>
 <div id="main-info-right" class="tone-box">
       <h1>Welcome!</h1>
