take 2 to display none for aside

--- a/templates/public/myaccount.tmpl
+++ b/templates/public/myaccount.tmpl
@@ -61,13 +61,13 @@ $('document').ready(function(){
 });
 
 </script>
-<script>
+<style type="text/css">
 
 #aside {
     display: none;
 }
 
-</script>
+</style>
 
 
 <div id="main">
