take 3 to display none aside

--- a/templates/public/myaccount.tmpl
+++ b/templates/public/myaccount.tmpl
@@ -63,7 +63,7 @@ $('document').ready(function(){
 </script>
 <style type="text/css">
 
-#aside {
+#aside, #stat, #leftcontent, #termlist, .aside {
     display: none;
 }
 
