updated butlink to button-right
found the template that had the old reference to but link code.
replaced footer info.

--- a/templates/public/header.tmpl
+++ b/templates/public/header.tmpl
@@ -57,8 +57,8 @@
 <!--header template from public folder-->
   <!--ARIA MARKER 'BANNER'-->
   <header role="banner">
-    <img src="/img/fill-logo.png" class="fill-logo" alt="fill"> <p class="fill-tagline">connecting libraries. serving patrons.</p>
-    <a href="?authen_logout=1"><button class="button-right">log out</button></a>
+        <a href="?authen_logout=1"><button class="button-right">log out</button></a>
+        <img src="/img/fill-logo.png" class="fill-logo" alt="fill"> <p class="fill-tagline">connecting libraries. serving patrons.</p>
   </header>
   
   <!--***************ARIA MARKER 'NAVIGATION'***************-->
@@ -79,7 +79,7 @@
 	<h2>search manitoba libraries:</h2>
 	<input id="query" type="text" name="query" size="50px">
 	<input id="rm" type="hidden" name="rm" value="search_form">
-	<input id="button" type="submit" value="search" class="butlink">
+	<input id="button" type="submit" value="search" class="">
       </form>
     </div>
   </div> <!-- search-container -->
