--- a/templates/public/myaccount.tmpl
+++ b/templates/public/myaccount.tmpl
@@ -82,7 +82,7 @@ $('document').ready(function(){
     </table>
   </div>
   
-  <a id="showChangePassButton" class="butlink" href="javascript:void(0)" onclick="toggleChangePassDiv()">Change password</a>
+  <a id="showChangePassButton" class="button-left" href="javascript:void(0)" onclick="toggleChangePassDiv()">Change password</a>
 
   <div id="divChangePass" style="display:none; border:1px solid #000000;">
     <form id="changePassword_form" name="changePassword" action="" method="post">
