-updated search text to just ‘search’ and ‘go’ -added dicChangePass to css, removed inline style and added padding. -removed div id main from my account tmpl to test effect. -added FAQ link in nav

--- a/htdocs/fILL-public-accessible.1.1.css
+++ b/htdocs/fILL-public-accessible.1.1.css
@@ -393,6 +393,11 @@ div.login input {
   margin: 0.3em 1.5em;
   width: 12em;
 
+#divChangePass {
+	display:none; 
+	border:1px solid #000000;
+	padding: .8em;
+}
 /*------------------------------------------------------*/
 .details {
     border: 1px solid #000000;
