--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -87,9 +87,9 @@
     <!--***************ARIA MARKER 'SEARCH'***************-->
     <div id="search" role="search">
       <form id="searchForm" name="search">
-	<h2>search manitoba libraries:</h2>
+	<h2>search:</h2>
 	<input id="query" type="text" size="50px" value="<TMPL_VAR name='query'>">
-	<input id="button" type="submit" value="search" class="butlink">
+	<input id="button" type="submit" value="go" class="">
       </form>
     </div>
   </div> <!-- search-container -->
