-trialling shrinking container to 90% to give a bit of room on edges. perhaps this can be ignored in a media query down the track. Also removed padding -adding a dashed red border to ‘search’ ‘main’ and ‘aside’ for dev purposes. will remove later. -trying to get new faq page to link. something missing, will attempt to find hidden value

--- a/htdocs/fILL-public-accessible.1.1.css
+++ b/htdocs/fILL-public-accessible.1.1.css
@@ -55,10 +55,9 @@ h3 {
 
 #container
 {
-	
 	margin: auto;
-	padding: 1%;
-	width: 100%;
+	padding: ;
+	width: 90%;
 	min-width: ;
 }
 
@@ -150,6 +149,7 @@ nav li a:active {
   	text-align: center;
 	display: block;
   	padding: 1.25em; 
+  	border: 1px dashed red;
 }
 
 #main-container {	
@@ -162,6 +162,7 @@ nav li a:active {
 	float: right;
 	width: 80%; 
   	padding: 1.25em; 
+  	border: 1px dashed red;
 }
 
 #aside
@@ -172,6 +173,7 @@ nav li a:active {
 	display: inline;
   	padding: 1.25em; 
   	font-size: .8em;
+  	border: 1px dashed red;
 }
 
 .main-info-left
