--- a/templates/public/faq.tmpl
+++ b/templates/public/faq.tmpl
@@ -1,7 +1,7 @@
 <TMPL_INCLUDE NAME="header.tmpl">
 
 <script type="text/javascript">
-    set_primary_tab("menu_about");
+    set_primary_tab("menu_faq");
 </script>
 
 
