--- a/templates/public/header.tmpl
+++ b/templates/public/header.tmpl
@@ -68,7 +68,7 @@
       <li><a href="/cgi-bin/public.cgi?rm=myaccount_form">my account</a></li>
       <li><a href="/cgi-bin/public.cgi?rm=current_form">current borrowing</a></li>
       <li><a href="/cgi-bin/public.cgi?rm=about_form">help</a></li>
-      <li><a href="/cgi-bin/public.cgi?rm=faq_form">FAQ</a></li>
+      <li><a href="/cgi-bin/public.cgi?rm=faq_form">FAQ1</a></li>
       <li><a href="/cgi-bin/public.cgi?rm=contact_form">contact</a></li>
     </ul>
   </nav>
@@ -77,10 +77,10 @@
     <!--***************ARIA MARKER 'SEARCH'***************-->
     <div id="search" role="search">
       <form action="/cgi-bin/public.cgi" method="post" name="search">
-	<h2>search manitoba libraries:</h2>
+	<h2>search:</h2>
 	<input id="query" type="text" name="query" size="50px">
 	<input id="rm" type="hidden" name="rm" value="search_form">
-	<input id="button" type="submit" value="search" class="">
+	<input id="button" type="submit" value="go" class="">
       </form>
     </div>
   </div> <!-- search-container -->
