-Moved logout button above logo in search tmpl. -added leaf image, and renamed to ‘holmesprofile2’ -trying out replacing search text with ‘placeholder=search’ text (in ‘header’ and ‘search’ tmpl) -coded out aside and main in ‘header’ template -Added ‘tone’box’ class

--- a/templates/public/header.tmpl
+++ b/templates/public/header.tmpl
@@ -76,16 +76,14 @@
   <div id="search-container">
     <!--***************ARIA MARKER 'SEARCH'***************-->
     <div id="search" role="search">
-      <form action="/cgi-bin/public.cgi" method="post" name="search">
-	<h2>search:</h2>
-	<input id="query" type="text" name="query" size="50px">
+	<input id="query" type="text" placeholder="Search" name="query" size="50px">
 	<input id="rm" type="hidden" name="rm" value="search_form">
-	<input id="button" type="submit" value="go" class="">
+	<input id="button" type="submit" value="Go" class="">
       </form>
     </div>
   </div> <!-- search-container -->
 
-  <!--***************ARIA MARKER 'COMPLIMENTARY'***************-->
+  <!--***************ARIA MARKER 'COMPLIMENTARY'***************
   <div id="aside" class="aside" role="complimentary">
     <div id="stat"></div>
     <div id="leftcontent"></div>
@@ -94,5 +92,5 @@
 
 
     <main class="main" id="main" role="main">
-
+-->
 <!-- Begin content -->
