--- a/templates/public/header.tmpl
+++ b/templates/public/header.tmpl
@@ -55,10 +55,10 @@
 
 <div id="container">
 <!--header template from public folder-->
-  <!--ARIA MARKER 'BANNER'-->
+  <!--***************ARIA MARKER 'BANNER'***************-->
   <header role="banner">
         <a href="?authen_logout=1"><button class="button-right">log out</button></a>
-        <img src="/img/fill-logo.png" class="fill-logo" alt="fill"> <p class="fill-tagline">connecting libraries. serving patrons.</p>
+        <a href="/"><img src="/img/fill-logo.png" class="fill-logo" alt="fill"></a><p class="fill-tagline">connecting libraries. serving patrons.</p>
   </header>
   
   <!--***************ARIA MARKER 'NAVIGATION'***************-->
