--- a/templates/search/lightning.tmpl
+++ b/templates/search/lightning.tmpl
@@ -6,7 +6,7 @@
  <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title><TMPL_VAR name="pagetitle"></title>
-  <link type="text/css" rel="stylesheet" href="/fILL-public-accessible.1.1.css">
+  <link rel="stylesheet" href="/fILL.public-accessible.1.1.css"></link>
   <script type="text/javascript" src="/js/jquery-1.7.min.js"></script>
   <script type="text/javascript" src="/js/pz2.js"></script>
   <script type="text/javascript" src="/js/fILL_client-1.4.js"></script>
