Revert "new css linked"
This reverts commit 8d533e58c1197f2e295d1cf40a310e96d064e0b4.

--- a/templates/search/lightning.tmpl
+++ b/templates/search/lightning.tmpl
@@ -6,7 +6,7 @@
  <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title><TMPL_VAR name="pagetitle"></title>
-  <link rel="stylesheet" href="/fILL.public-accessible.1.1.css"></link>
+  <link rel="stylesheet" href="/fILL.1.0.css"></link>
   <script type="text/javascript" src="/js/jquery-1.7.min.js"></script>
   <script type="text/javascript" src="/js/pz2.js"></script>
   <script type="text/javascript" src="/js/fILL_client-1.4.js"></script>
@@ -84,7 +84,6 @@ $('document').ready(function(){
 
 <!-- from header.tmpl -->
 <TMPL_INCLUDE NAME="header.tmpl">
-
 <!--<DIV id="header">
   <div id="logo">
     <img src="/img/fILL.png">
