--- a/templates/public/about.tmpl
+++ b/templates/public/about.tmpl
@@ -1,15 +1,15 @@
 <TMPL_INCLUDE NAME="header.tmpl">
-
+<link type="text/css" rel="stylesheet" href="/fILL-public-accessible.1.1.css">
 <script type="text/javascript">
     set_primary_tab("menu_about");
 </script>
 
 <div id="aside-image-left">
       <img src='/img/card_catalogue.jpg' alt="picture of a library card catalogue"/>
-      <p class="short_instruction">
+      <p>
   Photo by Flickr user haaaley.  http://flickr.com/photos/misshaley/515045131/
       </p>
-           <p class="short_instruction">
+           <p>
   Used under a Creative Commons Attribution-Noncommercial-Sharalike license.
       </p>
 </div>
