--- a/templates/public/myaccount.tmpl
+++ b/templates/public/myaccount.tmpl
@@ -63,9 +63,9 @@ $('document').ready(function(){
 </script>
 <style type="text/css">
 
-#aside, #stat, #leftcontent, #termlist, .aside {
+/*#aside, #stat, #leftcontent, #termlist, .aside {
     display: none;!important
-}
+}*/
 
 </style>
 
