added ton-box to about page

--- a/templates/public/about.tmpl
+++ b/templates/public/about.tmpl
@@ -13,7 +13,7 @@
   Used under a Creative Commons Attribution-Noncommercial-Sharalike license.
       </p>
 </div>
-<div id="main-info-right">
+<div id="main-info-right" class="tone-box">
       <h3>About fILL, the Manitoba public libraries interlibrary-loan requesting system.</h3>
       <p>
 	fILL enables you to quickly search the catalogues of many Manitoba public libraries at once.  When you find an item that you'd like to request, it enables you to ask your home library to try to get it for you.
