--- a/templates/public/about.tmpl
+++ b/templates/public/about.tmpl
@@ -16,8 +16,12 @@
 <div id="main-info-right" class="tone-box">
       <h3>About fILL, the Manitoba public libraries interlibrary-loan requesting system.</h3>
       <p>
-	fILL enables you to quickly search the catalogues of many Manitoba public libraries at once.  When you find an item that you'd like to request, it enables you to ask your home library to try to get it for you.
+	fILL enables you to quickly and easily search the catalogues of many Manitoba public libraries at once.  When you find an item that you'd like to request, it enables you to ask your home library to try to get it for you.
       </p>
+      <p>The fILL help page is designed to help you to better search for the book you want.<br />
+
+Scroll down the page to locate the information you are looking for or 
+</p>
       <h3>Tutorial</h3>
       <p style="text-decoration:underline;"><strong><a href="/Patrons%20-%20Searching%20tutorial.pdf">Download a quick tutorial about using fILL.</a></strong></p>
 
