--- a/htdocs/fILL-public-accessible.1.1.css
+++ b/htdocs/fILL-public-accessible.1.1.css
@@ -205,6 +205,7 @@ nav li a:active {
 	display: inline;
   	padding: 1.25em; 
   	font-size: 1.2em;
+  	border: 1px dashed red;
 }
 
 #aside-img-left
@@ -217,6 +218,7 @@ nav li a:active {
 	display: inline;
   	padding: 1.25em;
   	font-size: 1.2em; 
+  	border: 1px dashed red;
 }
 
 .tone-box 
