fixed aside ing div typo

--- a/templates/public/about.tmpl
+++ b/templates/public/about.tmpl
@@ -4,35 +4,37 @@
     set_primary_tab("menu_about");
 </script>
 
-<div id="aside-image-left">
+<div id="aside-img-left">
       <img src='/img/card_catalogue.jpg' alt="picture of a library card catalogue"/>
       <p>
   Photo by Flickr user haaaley.  http://flickr.com/photos/misshaley/515045131/
       </p>
-           <p>
+      <p>
   Used under a Creative Commons Attribution-Noncommercial-Sharalike license.
       </p>
 </div>
+
 <div id="main-info-right" class="tone-box">
       <h3>About fILL, the Manitoba public libraries interlibrary-loan requesting system.</h3>
       <p>
-	fILL enables you to quickly and easily search the catalogues of many Manitoba public libraries at once.  When you find an item that you'd like to request, it enables you to ask your home library to try to get it for you.
+	        fILL enables you to quickly and easily search the catalogues of many Manitoba public libraries at once.  When you find an item that you'd like to request, it enables you to ask your home library to try to get it for you.
       </p>
       <p>The fILL help page is designed to help you to better search for the book you want.<br />
 
-Scroll down the page to locate the information you are looking for or 
-</p>
+         Scroll down the page to locate the information you are looking for or 
+      </p>
       <h3>Tutorial</h3>
       <p style="text-decoration:underline;"><strong><a href="/Patrons%20-%20Searching%20tutorial.pdf">Download a quick tutorial about using fILL.</a></strong></p>
 
       <h3>Privacy</h3>
       <p>
-	fILL does not keep any record of your searches or requests after your books are returned.  
-	Logging in is necessary for your library to know who is making the request, but no information 
-	linking your account to any searches or requests is kept after the ILL transaction is completed.
-	Some non-identifying data may be retained for statistical purposes.
+      	fILL does not keep any record of your searches or requests after your books are returned.  
+      	Logging in is necessary for your library to know who is making the request, but no information 
+      	linking your account to any searches or requests is kept after the ILL transaction is completed.
+      	Some non-identifying data may be retained for statistical purposes.
       </p>
 </div><!--main-info-right-->
+
 <!--
       <p class="debuginfo">Logged in as [<TMPL_VAR NAME="username">]</p>
       <p class="debuginfo">Session id [<TMPL_VAR NAME="sessionid">]</p>
