--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -69,7 +69,7 @@
   <!--ARIA MARKER 'BANNER'-->
   <header role="banner">
         <a href="?authen_logout=1"><button class="button-right">log out</button></a>
-        <img src="/img/fill-logo.png" class="fill-logo" alt="fill"> <p class="fill-tagline">connecting libraries. serving patrons.</p>
+        <a href="/"><img src="/img/fill-logo.png" class="fill-logo" alt="fill"></a><p class="fill-tagline">connecting libraries. serving patrons.</p>
   </header>
   
   <!--***************ARIA MARKER 'NAVIGATION'***************-->
