--- a/templates/public/header.tmpl
+++ b/templates/public/header.tmpl
@@ -83,14 +83,5 @@
     </div>
   </div> <!-- search-container -->
 
-  <!--***************ARIA MARKER 'COMPLIMENTARY'***************
-  <div id="aside" class="aside" role="complimentary">
-    <div id="stat"></div>
-    <div id="leftcontent"></div>
-    <div id="termlist"></div>
-  </div>
-
-
-    <main class="main" id="main" role="main">
--->
+</div><!--container div-->
 <!-- Begin content -->
