--- a/templates/public/welcome.tmpl
+++ b/templates/public/welcome.tmpl
@@ -1,18 +1,11 @@
 <TMPL_INCLUDE NAME="header.tmpl">
+
 <div id="aside-img-left">
-<img src="/img/fill-logo.png">
+      <img src='/img/library-dude.png' alt="picture of a man next to library shelves"/>
 </div>
+
 <div id="main-info-right" class="tone-box">
-      <img src='/img/card_catalogue.jpg' alt="picture of a library card catalogue"/>
-      <br/>
-      <p class="short_instruction">
-	Photo by Flickr user haaaley.  http://flickr.com/photos/misshaley/515045131/
-      </p>
-      <p class="short_instruction">
-	Used under a Creative Commons Attribution-Noncommercial-Sharalike license.
-      </p>
-    </td>
-    <td>
+
       <h1>Welcome!</h1>
       <br />
       <p>Welcome to the Manitoba public libraries interlibrary-loan requesting system.</p>
@@ -44,7 +37,8 @@
       <br/>
       <br />
 
-      </div><!--main-info-right-->
+</div><!--main-info-right-->
+
       <p class="debuginfo">Logged in as [<TMPL_VAR NAME="username">]</p>
       <p class="debuginfo">Session id [<TMPL_VAR NAME="sessionid">]</p>
 
