--- a/templates/public/myaccount.tmpl
+++ b/templates/public/myaccount.tmpl
@@ -69,7 +69,7 @@ $('document').ready(function(){
 
 </style>
 
-  <div id="myDiv">
+  <div id="container">
     <h3>My Account</h3>
     <table id="fill-table">
       <tr><th scope="row">Name</th><td><TMPL_VAR name="name"></td></tr>
