welcome page redesign phase 1
introducing a new layout for welcome page. removing logo from top of
screen and introducing it to aside section with tagline

--- a/htdocs/fILL-public-accessible.1.1.css
+++ b/htdocs/fILL-public-accessible.1.1.css
@@ -195,6 +195,25 @@ nav li a:active {
   	min-width: 480px;
 }
 
+#main-info-welcome 
+{
+	float: right;
+	width: 50%;
+	font-size: 3em;
+	margin-bottom: 1em;
+	display: inline;
+  	padding: 1.25em; 
+  	min-width: 480px;
+}
+
+#aside-img-welcome {
+	float: left;
+	width: 45%;
+	margin-bottom: 1.5em;
+	display: inline;
+  	padding: 1.25em; 
+}
+
 #aside-img-right
 {
 	
